--- a/tests/unit-tests/CMakeLists.txt
+++ b/tests/unit-tests/CMakeLists.txt
@@ -16,7 +16,7 @@ set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 FetchContent_Declare(
 	googletest
 	GIT_REPOSITORY https://github.com/google/googletest.git
-	GIT_TAG        v1.10.0
+	GIT_TAG        v1.14.0
 )
 
 FetchContent_MakeAvailable(googletest)
@@ -37,6 +37,7 @@ add_executable(
 	thomas-algorithm-test.cpp
 	LU-decomposition-test.cpp
 	lagrange-test.cpp
+	interpolation-newton-test.cpp
 )
 
 target_link_libraries(myTest PRIVATE MyLibrary gtest gtest_main)
